--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     }).addTo(map);
 
     // 2. Mapillary Client Token (get one for free)
-    const MAPILLARY_TOKEN = "YOUR_MAPILLARY_TOKEN_HERE";
+    const MAPILLARY_TOKEN = "MLY|25126737453618126|fb1bfb30aef92699490d03081295b516";
 
     // 3. Create the viewer container
     const viewer = new mapillary.Viewer({
