--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Mini GeoGuessr</title>
+  <title>Mini GeoGuessr with Mapillary</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link
     rel="stylesheet"
@@ -14,6 +14,7 @@
       padding: 0;
       height: 100%;
       overflow: hidden;
+      font-family: sans-serif;
     }
     #streetview {
       width: 100%;
@@ -21,53 +22,86 @@
     }
     #map {
       position: absolute;
-      top: 10px;
-      left: 10px;
-      width: 200px;
-      height: 200px;
+      bottom: 20px;
+      left: 20px;
+      width: 300px;
+      height: 300px;
       z-index: 1000;
       border: 2px solid white;
       border-radius: 8px;
       overflow: hidden;
+    }
+    #scoreBox {
+      position: absolute;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(0,0,0,0.7);
+      color: white;
+      padding: 10px 20px;
+      border-radius: 10px;
+      font-size: 18px;
+      z-index: 1001;
+    }
+    #nextBtn {
+      position: absolute;
+      top: 80px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #4caf50;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+      display: none;
+      z-index: 1001;
+    }
+    #nextBtn:hover {
+      background: #45a049;
     }
   </style>
 </head>
 <body>
   <div id="streetview"></div>
   <div id="map"></div>
+  <div id="scoreBox">Make a guess!</div>
+  <button id="nextBtn">Next Round</button>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <!-- Mapillary Viewer SDK -->
   <script src="https://unpkg.com/@mapillary/js@4.0.0/dist/mapillary.min.js"></script>
   <script>
-    // 1. Initialize Leaflet mini map (optional, like in GeoGuessr)
+    // 🔑 Replace this with your REGENERATED token
+    const MAPILLARY_TOKEN = "MLY|25126737453618126|fb1bfb30aef92699490d03081295b516";
+
+    const viewer = new mapillary.Viewer({
+      container: 'streetview',
+      accessToken: MAPILLARY_TOKEN,
+    });
+
     const map = L.map('map').setView([0, 0], 2);
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       maxZoom: 19,
-      attribution: '&copy; OpenStreetMap contributors'
+      attribution: '&copy; OpenStreetMap contributors',
     }).addTo(map);
 
-    // 2. Mapillary Client Token (get one for free)
-    const MAPILLARY_TOKEN = "MLY|25126737453618126|fb1bfb30aef92699490d03081295b516";
+    let actualLocation = null;
+    let guessMarker = null;
+    let actualMarker = null;
 
-    // 3. Create the viewer container
-    const viewer = new mapillary.Viewer({
-      container: 'streetview',
-      accessToken: MAPILLARY_TOKEN
-    });
-
-    // 4. Pick random location (example: somewhere roughly on Earth land)
-    function randomLatLng() {
-      // Rough bounding box to avoid the middle of the ocean
-      const lat = Math.random() * 140 - 70;  // -70 to 70
-      const lng = Math.random() * 360 - 180; // -180 to 180
+    function randomEuropeLatLng() {
+      // Europe bounding box roughly
+      const lat = Math.random() * (71 - 35) + 35;
+      const lng = Math.random() * (40 - (-10)) - 10;
       return [lat, lng];
     }
 
     async function loadRandomStreetView() {
-      const [lat, lng] = randomLatLng();
+      document.getElementById('scoreBox').textContent = 'Loading random location...';
+      document.getElementById('nextBtn').style.display = 'none';
 
-      // 5. Search for the nearest street image near the random coords
+      const [lat, lng] = randomEuropeLatLng();
       const url = `https://graph.mapillary.com/images?access_token=${MAPILLARY_TOKEN}&fields=id,geometry&closeto=${lng},${lat}&limit=1`;
 
       try {
@@ -76,15 +110,65 @@
         if (data.data && data.data.length > 0) {
           const image = data.data[0];
           viewer.moveTo(image.id);
-          map.setView([image.geometry.coordinates[1], image.geometry.coordinates[0]], 14);
+          actualLocation = {
+            lat: image.geometry.coordinates[1],
+            lng: image.geometry.coordinates[0],
+          };
+          document.getElementById('scoreBox').textContent = 'Make a guess on the map!';
+          map.setView([0, 0], 2);
+          if (guessMarker) map.removeLayer(guessMarker);
+          if (actualMarker) map.removeLayer(actualMarker);
         } else {
-          // Retry if no image found
-          loadRandomStreetView();
+          loadRandomStreetView(); // retry if no image found
         }
       } catch (err) {
         console.error(err);
+        loadRandomStreetView();
       }
     }
+
+    function calculateDistance(lat1, lon1, lat2, lon2) {
+      const R = 6371; // km
+      const dLat = (lat2 - lat1) * Math.PI / 180;
+      const dLon = (lon2 - lon1) * Math.PI / 180;
+      const a =
+        Math.sin(dLat / 2) * Math.sin(dLat / 2) +
+        Math.cos(lat1 * Math.PI / 180) *
+        Math.cos(lat2 * Math.PI / 180) *
+        Math.sin(dLon / 2) *
+        Math.sin(dLon / 2);
+      const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+      return R * c;
+    }
+
+    map.on('click', (e) => {
+      if (!actualLocation) return;
+
+      if (guessMarker) map.removeLayer(guessMarker);
+      guessMarker = L.marker(e.latlng).addTo(map);
+
+      // show actual location
+      if (actualMarker) map.removeLayer(actualMarker);
+      actualMarker = L.marker(actualLocation, {color: 'red'}).addTo(map);
+
+      const distance = calculateDistance(
+        e.latlng.lat,
+        e.latlng.lng,
+        actualLocation.lat,
+        actualLocation.lng
+      );
+
+      let score = Math.max(0, Math.round(5000 - distance)); // simple scoring
+      document.getElementById('scoreBox').textContent =
+        `Distance: ${distance.toFixed(1)} km | Score: ${score}`;
+      document.getElementById('nextBtn').style.display = 'block';
+
+      // zoom to fit both markers
+      const group = L.featureGroup([guessMarker, actualMarker]);
+      map.fitBounds(group.getBounds(), {padding: [20, 20]});
+    });
+
+    document.getElementById('nextBtn').addEventListener('click', loadRandomStreetView);
 
     loadRandomStreetView();
   </script>
